  * Make the partman/unmount_active dialog a yes or no question.
  * Sort the list of regions on the timezone page (LP: #344334).
  * Merge Roman's city placement code into the GTK frontend.
  * Work in bytes rather than percentages in the partition bar code.
  * Fix partition bar slider (for resizing) code by adding correct
    calcuations for bounds checking and slider positioning.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 19 Mar 2009 12:02:04 +0000

ubiquity (1.11.19) jaunty; urgency=low

  [ Colin Watson ]
  * Update translations from Launchpad.
  * Tighten frontend dependencies on ubiquity to prevent problems when one
    architecture is out of sync.

  [ Evan Dandrea ]
  * Only create one virtual desktop when in only-ubiquity mode
    (LP: #343451, LP: #321212).
  * When the user selects "go back" in response to the weak password dialog,
    select the text in the first password entry (LP: #344402).
  * Add partman/unmount_active to the list of questions that mean "do you want
    to continue?" in the partman component.
  * Automatic update of included source packages: partman-base
    129ubuntu3, partman-partitioning 64ubuntu6, user-setup 1.23ubuntu15.

  [ Jonathan Riddell ]
  * turn on wordwrap for long string in gui/qt/liveinstaller.ui

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 18 Mar 2009 21:41:26 +0000

ubiquity (1.11.18) jaunty; urgency=low

  [ Colin Watson ]
  * broken_packages is fairly slow due to having to iterate over the whole
    cache. Speed it up a bit by stopping when the number of broken packages
    found reaches cache._depcache.BrokenCount; this improves blacklist
    calculation time for the previously-mentioned DVD English-only install
    from 3:30 to 2:30 (see LP #335596).
  * GTK frontend:
    - Restore set_window_hints method for use by windows other than the main
      one (it was still called in the Glade file), just in case we're using
      a window manager that pays attention to this. In these cases