@@ -14,6 +14,7 @@ ubiquity (1.11.20) UNRELEASED; urgency=low
   * Work in bytes rather than percentages in the partition bar code.
   * Fix partition bar slider (for resizing) code by adding correct
     calcuations for bounds checking and slider positioning.
+  * Properly encode data from os-prober (LP: #345573).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 19 Mar 2009 12:02:04 +0000
 
